# document-repository

./: .gitignore  Makefile  README.md
client/: .dockerignore  Dockerfile.client  Dockerfile.client.dev  Dockerfile.client.prod  package.json
client/public/: index.html
client/src/: App.js  AppProviders.js  index.css  index.js
client/src/api/: apiClient.js  fetchers.js
client/src/api/handler/: account.js  auth.js  files.js  users.js
client/src/components/items/: FileListItem.js  FileUploadDialogItem.js  Loading.js  (+2 more)
client/src/config/: index.js
client/src/hooks/: useFilterData.js
client/src/pages/: Account.js  AuthRoute.js  FileDetails.js  ForgotPassword.js  Home.js  Landing.js  Login.js  Register.js  ResetPassword.js  UserProfile.js  Users.js
client/src/utils/: querykeys.js  theme.js  toErrorMap.js
client/src/validation/: auth.schema.js
nginx/: file-drive.conf  nginx.conf
server/: .env  .env.prod  .gitignore  Dockerfile.server  Dockerfile.server.dev  Dockerfile.server.prod  docker-entrypoint.sh  pyproject.toml  requirements.txt  uwsgi.ini
server/common/management/commands/: initadmin.py
server/files/: models.py  permissions.py  serializers.py  urls.py  views.py
server/files/migrations/: 0001_initial.py  0002_file_document.py  0003_file_uploaded_by.py
server/server/: settings.py  urls.py
server/users/: admin.py  models.py  serializers.py  urls.py  views.py
server/users/migrations/: 0003_alter_user_options_rename_last_name_user_name_and_more.py  0004_alter_user_access_level_alter_user_is_active_and_more.py  0005_alter_user_role.py
(+24 files in other folders)
