[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Omulosi <mulongojohnpaul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
django-environ = "^0.8.1"
psycopg2-binary = "^2.9.3"
djoser = "^2.1.0"
django-extensions = "^3.1.5"
gunicorn = "^20.1.0"
django-on-heroku = "^1.1.2"
dj-database-url = "^0.5.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
